--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Long Haul
-description: Long Form Jekyll theme built with SASS
+title: Nolan Can Read
+description: Some books I have been reading (or listening to? Kind of counts?)
 
 url: https://long-haul.netlify.app
 paginate_path: "blog/page:num/"
@@ -9,7 +9,7 @@ permalink: blog/:title/
 # header: large
 
 sass:
-    style: compressed
+  style: compressed
 
 markdown: kramdown
 highlighter: rouge
@@ -17,21 +17,7 @@ plugins: [jekyll-paginate]
 paginate: 5
 
 navigation:
-    - title: Home
-      url: /index.html
-    - title: About
-      url: /about
-    - title: Contact
-      url: /contact
-
-social:
-    github: brianmaierjr
-    twitter: brianmaierjr
-    facebook: brianmaierjr
-    email: brimaidesigns@gmail.com
-    linkedin: brianmaierjr
-
-google_analytics: "UA-58263416-1"
-
-disqus:
-    shortname: brianmaierjr
+  - title: Home
+    url: /index.html
+  - title: About
+    url: /about
