--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ defaults:
       type: groups # select all category pages
     values:
       layout: list
-      permalink: /:category/
+      permalink: /:path:basename
 
 navigation:
   - title: Home
