--- a/.github/workflows/build-jekyll.yml
+++ b/.github/workflows/build-jekyll.yml
@@ -28,4 +28,4 @@ jobs:
           jekyll_src: "./" # Default is root directory
           jekyll_cfg: "_config.yml" # Default is _config.yml
           bundler_ver: ">=0" # Default is latest bundler version
-          cname: "https://readings.of.nhawk.in/" # Default is to not use a cname
+          cname: "https://readings.of.nhawk.in" # Default is to not use a cname
